--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,14 +6,15 @@
   color: white;
 }  
 
-.link{
+.cta{
   font-size: 16px;
   color: Aquamarine;
   text-align: center;
 
 }
 
-.travel-guide{
+.travel-guide,
+ .coming-soon {
   font-family: Verdana;
   font-weight: 300;
   font-size: 42px;
@@ -29,4 +30,9 @@
 
 .img-phone{
   text-align: center;
+}
+
+.footer{
+  text-align: right;
+  color: gray;
 }
